--- a/src/config/local.yaml
+++ b/src/config/local.yaml
@@ -1,5 +1,5 @@
 env: "local"  #local/prod
-storage_path: "./storage/storage.db"
+storage_path: "./src/storage/storage.db"
 http_server:
     address: "localhost:8082"
     timeout: 4s # time for reading request and answering, but not processing
